@startuml

abstract class AbstractRawIVFilter
abstract class AbstractPerExpiryRawIVFilter
class CompositeRawIVFilter
class ExpiredExpiryFilter
class InTheMoneyFilter
class NonTwoSidedMarketFilter
class StaleLastTradeDateFilter
class WideMarketFilter
class InsufficientValidStrikesFilter

AbstractRawIVFilter <|-- AbstractPerExpiryRawIVFilter
AbstractRawIVFilter <|-- CompositeRawIVFilter
AbstractPerExpiryRawIVFilter <|-- ExpiredExpiryFilter
AbstractPerExpiryRawIVFilter <|-- InTheMoneyFilter
AbstractPerExpiryRawIVFilter <|-- NonTwoSidedMarketFilter
AbstractPerExpiryRawIVFilter <|-- StaleLastTradeDateFilter
AbstractPerExpiryRawIVFilter <|-- WideMarketFilter
AbstractPerExpiryRawIVFilter <|-- InsufficientValidStrikesFilter

CompositeRawIVFilter "0..n" o-- AbstractRawIVFilter

@enduml